examples/LexActivator.h

    typedef const wchar_t* CSTRTYPE;
    typedef wchar_t* STRTYPE;
    typedef const char* CSTRTYPE;
    typedef char* STRTYPE;
typedef void (LA_CC *CallbackType)(uint32_t);
LEXACTIVATOR_API int LA_CC GetLicenseExpiryDate(uint32_t *expiryDate);
LEXACTIVATOR_API int LA_CC GetLicenseMaintenanceExpiryDate(uint32_t* maintenanceExpiryDate);
LEXACTIVATOR_API int LA_CC GetLicenseMaxAllowedReleaseVersion(STRTYPE maxAllowedReleaseVersion, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseUserEmail(STRTYPE email, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseUserName(STRTYPE name, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseUserCompany(STRTYPE company, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseUserMetadata(CSTRTYPE key, STRTYPE value, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseOrganizationName(STRTYPE organizationName, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseOrganizationAddress(OrganizationAddress *organizationAddress);
LEXACTIVATOR_API int LA_CC GetUserLicenses(UserLicense* userLicensesPtr, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseType(STRTYPE licenseType, uint32_t length);
LEXACTIVATOR_API int LA_CC GetActivationId(STRTYPE id, uint32_t length);
LEXACTIVATOR_API int LA_CC GetActivationMetadata(CSTRTYPE key, STRTYPE value, uint32_t length);
LEXACTIVATOR_API int LA_CC GetActivationMode(STRTYPE initialMode, uint32_t initialModeLength, STRTYPE currentMode, uint32_t currentModeLength);
LEXACTIVATOR_API int LA_CC GetActivationMeterAttributeUses(CSTRTYPE name, uint32_t *uses);
LEXACTIVATOR_API int LA_CC GetServerSyncGracePeriodExpiryDate(uint32_t *expiryDate);
LEXACTIVATOR_API int LA_CC GetLastActivationError(uint32_t *errorPtr);
LEXACTIVATOR_API int LA_CC GetTrialActivationMetadata(CSTRTYPE key, STRTYPE value, uint32_t length);
LEXACTIVATOR_API int LA_CC GetTrialExpiryDate(uint32_t *trialExpiryDate);
LEXACTIVATOR_API int LA_CC GetTrialId(STRTYPE trialId, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLocalTrialExpiryDate(uint32_t *trialExpiryDate);
LEXACTIVATOR_API int LA_CC GetLibraryVersion(STRTYPE libraryVersion, uint32_t length);
LEXACTIVATOR_API int LA_CC CheckForReleaseUpdate(CSTRTYPE platform, CSTRTYPE version, CSTRTYPE channel, CallbackType releaseUpdateCallback);
LEXACTIVATOR_API int LA_CC AuthenticateUser(CSTRTYPE email, CSTRTYPE password);
LEXACTIVATOR_API int LA_CC AuthenticateUserWithIdToken(CSTRTYPE idToken);
LEXACTIVATOR_API int LA_CC ActivateLicense();
LEXACTIVATOR_API int LA_CC ActivateLicenseOffline(CSTRTYPE filePath);
LEXACTIVATOR_API int LA_CC GenerateOfflineActivationRequest(CSTRTYPE filePath);
LEXACTIVATOR_API int LA_CC DeactivateLicense();
LEXACTIVATOR_API int LA_CC GenerateOfflineDeactivationRequest(CSTRTYPE filePath);
LEXACTIVATOR_API int LA_CC IsLicenseGenuine();
LEXACTIVATOR_API int LA_CC IsLicenseValid();
LEXACTIVATOR_API int LA_CC ActivateTrial();
LEXACTIVATOR_API int LA_CC ActivateTrialOffline(CSTRTYPE filePath);
LEXACTIVATOR_API int LA_CC GenerateOfflineTrialActivationRequest(CSTRTYPE filePath);
LEXACTIVATOR_API int LA_CC IsTrialGenuine();
LEXACTIVATOR_API int LA_CC ActivateLocalTrial(uint32_t trialLength);
LEXACTIVATOR_API int LA_CC IsLocalTrialGenuine();
LEXACTIVATOR_API int LA_CC ExtendLocalTrial(uint32_t trialExtensionLength);
LEXACTIVATOR_API int LA_CC IncrementActivationMeterAttributeUses(CSTRTYPE name, uint32_t increment);
LEXACTIVATOR_API int LA_CC DecrementActivationMeterAttributeUses(CSTRTYPE name, uint32_t decrement);
LEXACTIVATOR_API int LA_CC ResetActivationMeterAttributeUses(CSTRTYPE name);
LEXACTIVATOR_API int LA_CC Reset();