ruby/LexActivator.rb


  # @method GetLicenseExpiryDate(expiry_date)
  # @param [FFI::Pointer(*Uint32T)] expiry_date - A value of 0 indicates it has no expiry i.e a lifetime license.
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseExpiryDate, :GetLicenseExpiryDate, [:pointer], :int

  # @method GetLicenseMaintenanceExpiryDate(maintenanceExpiryDate)
  # @param [FFI::Pointer(*Uint32T)] maintenanceExpiryDate - pointer to the integer that receives the value. A value of 0 indicates an unlimited maintenance period.  
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseMaintenanceExpiryDate, :GetLicenseMaintenanceExpiryDate, [:pointer], :int

  # @method GetLicenseMaxAllowedReleaseVersion(maxAllowedReleaseVersion, length)
  # @param [String] maxAllowedReleaseVersion
  # @param [Integer] length 
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseMaxAllowedReleaseVersion, :GetLicenseMaxAllowedReleaseVersion, [:pointer, :uint], :int

  # @method GetLicenseUserEmail(email, length)
  # @param [String] email
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseUserEmail, :GetLicenseUserEmail, [:pointer, :uint], :int

  # @method GetLicenseUserName(name, length)
  # @param [String] name
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseUserName, :GetLicenseUserName, [:pointer, :uint], :int

  # @method GetLicenseUserCompany(name, length)
  # @param [String] name
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseUserCompany, :GetLicenseUserCompany, [:pointer, :uint], :int

  # @method GetLicenseUserMetadata(key, value, length)
  # @param [String] key
  # @param [String] value
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseUserMetadata, :GetLicenseUserMetadata, [:string, :pointer, :uint], :int

  # @method GetLicenseOrganizationAddress(organizationAddress)
  # @param [FFI::Pointer(OrganizationAddress)] organizationAddress
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseOrganizationAddress, :GetLicenseOrganizationAddress, [:pointer], :int

  # @method GetUserLicenses(userLicenses, length)
  # @param [FFI::Pointer(UserLicense)] userLicenses - Pointer to an array of UserLicense structs
  # @param [Integer] length - The number of UserLicense structs in the array
  # @return [Integer]
  # @scope class
  attach_function :GetUserLicenses, :GetUserLicenses, [:pointer, :uint], :int

  # @method GetLicenseOrganizationName(organizationName, length)
  # @param [String] organizationName
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseOrganizationName, :GetLicenseOrganizationName, [:pointer, :uint], :int

  # @method GetLicenseType(license_type, length)
  # @param [String] license_type
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetLicenseType, :GetLicenseType, [:pointer, :uint], :int

  # @method GetActivationId(id, length)
  # @param [String] id
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetActivationId, :GetActivationId, [:pointer, :uint], :int

  # @method GetActivationMetadata(key, value, length)
  # @param [String] key
  # @param [String] value
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetActivationMetadata, :GetActivationMetadata, [:string, :pointer, :uint], :int

  # @method GetActivationMode(initialMode, initialModeLength, currentMode, currentModeLength)
  # @param [String] initialMode
  # @param [Integer] initialModeLength
  # @param [String] currentMode
  # @param [Integer] currentModeLength
  # @return [Integer]
  # @scope class
  attach_function :GetActivationMode, :GetActivationMode, [:pointer, :uint, :pointer, :uint], :int

  # @method GetActivationMeterAttributeUses(name, uses)
  # @param [String] name
  # @param [FFI::Pointer(*Uint32T)] uses
  # @return [Integer]
  # @scope class
  attach_function :GetActivationMeterAttributeUses, :GetActivationMeterAttributeUses, [:string, :pointer], :int

  # @method GetServerSyncGracePeriodExpiryDate(expiry_date)
  # @param [FFI::Pointer(*Uint32T)] expiry_date
  # @return [Integer]
  # @scope class
  attach_function :GetServerSyncGracePeriodExpiryDate, :GetServerSyncGracePeriodExpiryDate, [:pointer], :int

  # @method GetLastActivationError(error_code)
  # @param [FFI::Pointer(*Uint32T)] error_code
  # @return [Integer]
  # @scope class
  attach_function :GetLastActivationError, :GetLastActivationError, [:pointer], :int

  # @method GetTrialActivationMetadata(key, value, length)
  # @param [String] key
  # @param [String] value
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetTrialActivationMetadata, :GetTrialActivationMetadata, [:string, :pointer, :uint], :int

  # @method GetTrialExpiryDate(trial_expiry_date)
  # @param [FFI::Pointer(*Uint32T)] trial_expiry_date
  # @return [Integer]
  # @scope class
  attach_function :GetTrialExpiryDate, :GetTrialExpiryDate, [:pointer], :int

  # @method GetTrialId(trial_id, length)
  # @param [String] trial_id
  # @param [Integer] length
  # @return [Integer]
  # @scope class
  attach_function :GetTrialId, :GetTrialId, [:pointer, :uint], :int

  # @method GetLibraryVersion(libraryVersion, length)
  # @param [String] libraryVersion
  # @param [Integer] length 
  # @return [Integer]
  # @scope class
  attach_function :GetLibraryVersion, :GetLibraryVersion, [:pointer, :uint], :int

  # @method GetLocalTrialExpiryDate(trial_expiry_date)
  # @param [FFI::Pointer(*Uint32T)] trial_expiry_date
  # @return [Integer]
  # @scope class
  attach_function :GetLocalTrialExpiryDate, :GetLocalTrialExpiryDate, [:pointer], :int

  # @method CheckForReleaseUpdate(platform, version, channel, callback)
  # @param [String] platform
  # @param [String] version
  # @param [String] channel
  # @param [FFI::Pointer(CallbackType)] callback
  # @return [Integer]
  # @scope class
  attach_function :CheckForReleaseUpdate, :CheckForReleaseUpdate, [:string, :string, :string, :release_update_callback], :int

  # @method AuthenticateUser(email, password)
  # @param [String] email
  # @param [String] password
  # @return [Integer]
  # @scope class
  attach_function :AuthenticateUser, :AuthenticateUser, [:string, :string], :int

  # @method AuthenticateUserWithIdToken(idToken)
  # @param [String] idToken - The id token obtained from the OIDC provider.
  # @return [Integer]
  # @scope class
  attach_function :AuthenticateUserWithIdToken, :AuthenticateUserWithIdToken, [:string], :int

  # @method ActivateLicense()
  # @return [Integer]
  # @scope class
  attach_function :ActivateLicense, :ActivateLicense, [], :int

  # @method ActivateLicenseOffline(file_path)
  # @param [String] file_path
  # @return [Integer]
  # @scope class
  attach_function :ActivateLicenseOffline, :ActivateLicenseOffline, [:string], :int

  # @method GenerateOfflineActivationRequest(file_path)
  # @param [String] file_path
  # @return [Integer]
  # @scope class
  attach_function :GenerateOfflineActivationRequest, :GenerateOfflineActivationRequest, [:string], :int

  # @method DeactivateLicense()
  # @return [Integer]
  # @scope class
  attach_function :DeactivateLicense, :DeactivateLicense, [], :int

  # @method GenerateOfflineDeactivationRequest(file_path)
  # @param [String] file_path
  # @return [Integer]
  # @scope class
  attach_function :GenerateOfflineDeactivationRequest, :GenerateOfflineDeactivationRequest, [:string], :int

  # @method IsLicenseGenuine()
  # @return [Integer]
  # @scope class
  attach_function :IsLicenseGenuine, :IsLicenseGenuine, [], :int

  # @method IsLicenseValid()
  # @return [Integer]
  # @scope class
  attach_function :IsLicenseValid, :IsLicenseValid, [], :int

  # @method ActivateTrial()
  # @return [Integer]
  # @scope class
  attach_function :ActivateTrial, :ActivateTrial, [], :int

  # @method ActivateTrialOffline(file_path)
  # @param [String] file_path
  # @return [Integer]
  # @scope class
  attach_function :ActivateTrialOffline, :ActivateTrialOffline, [:string], :int

  # @method GenerateOfflineTrialActivationRequest(file_path)
  # @param [String] file_path
  # @return [Integer]
  # @scope class
  attach_function :GenerateOfflineTrialActivationRequest, :GenerateOfflineTrialActivationRequest, [:string], :int

  # @method IsTrialGenuine()
  # @return [Integer]
  # @scope class
  attach_function :IsTrialGenuine, :IsTrialGenuine, [], :int

  # @method ActivateLocalTrial(trial_length)
  # @param [Integer] trial_length
  # @return [Integer]
  # @scope class
  attach_function :ActivateLocalTrial, :ActivateLocalTrial, [:uint], :int

  # @method IsLocalTrialGenuine()
  # @return [Integer]
  # @scope class
  attach_function :IsLocalTrialGenuine, :IsLocalTrialGenuine, [], :int

  # @method ExtendLocalTrial(trial_extension_length)
  # @param [Integer] trial_extension_length
  # @return [Integer]
  # @scope class
  attach_function :ExtendLocalTrial, :ExtendLocalTrial, [:uint], :int

  # @method IncrementActivationMeterAttributeUses(name, increment)
  # @param [String] name
  # @param [Integer] increment
  # @return [Integer]
  # @scope class
  attach_function :IncrementActivationMeterAttributeUses, :IncrementActivationMeterAttributeUses, [:string, :uint], :int

  # @method DecrementActivationMeterAttributeUses(name, decrement)
  # @param [String] name
  # @param [Integer] decrement
  # @return [Integer]
  # @scope class
  attach_function :DecrementActivationMeterAttributeUses, :DecrementActivationMeterAttributeUses, [:string, :uint], :int

  # @method ResetActivationMeterAttributeUses(name)
  # @param [String] name
  # @return [Integer]
  # @scope class
  attach_function :ResetActivationMeterAttributeUses, :ResetActivationMeterAttributeUses, [:string], :int

  # @method Reset()
  # @return [Integer]
  # @scope class
  attach_function :Reset, :Reset, [], :int
end
